--- a/purchase-item/checkout-page.html
+++ b/purchase-item/checkout-page.html
@@ -135,14 +135,14 @@
 
             <!-- DropDown NavBar 3 Begins Here -->
             <li class="nav-item">
-              <a class="nav-link " href="#" aria-haspopup="true" aria-expanded="false">
+              <a class="nav-link " href="../restoration-page.html" aria-haspopup="true" aria-expanded="false">
                 Restoration
               </a>
               <!-- Dropdown NavBar 2 Ends Here -->
 
 
               <li class="nav-item">
-                <a class="nav-link" href="./about/index.html">About</a>
+                <a class="nav-link" href="../about/index.html">About</a>
                 <li class="nav-item">
 
                 </li>
