--- a/shop/used-9.10/page1.html
+++ b/shop/used-9.10/page1.html
@@ -135,25 +135,16 @@
 
 
                   <!-- DropDown NavBar 3 Begins Here -->
-                  <li class="nav-item dropdown">
-                    <a class="nav-link dropdown-toggle" href="#" id="navbarDropdownMenuLink" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">
-                      Repair
+                  <li class="nav-item ">
+                    <a class="nav-link dropdown" href="../../restoration-page.html"  aria-haspopup="true" aria-expanded="false">
+                      Restoration
                     </a>
-                    <div class="dropdown-menu" aria-labelledby="navbarDropdownMenuLink">
-                      <a class="dropdown-item" href="#">.</a>
-                      <a class="dropdown-item" href="#">..</a>
-                      <a class="dropdown-item" href="#">...</a>
-                    </div>
+                  
                     <!-- Dropdown NavBar 3 Ends Here -->
 
                     <li class="nav-item">
-                      <a class="nav-link" href="./about/index.html">About</a>
-                      <li class="nav-item">
-                        <a class="nav-link" href="#">Accesories</a>
-
-
-                      </li>
-
+                      <a class="nav-link" href="../../about/index.html">About</a>
+                     
                     </li>
             </ul>
 
@@ -261,7 +252,7 @@
                       </div>
                     </div>
                   </div>
-
+                <h5>$140.00</h5>
                 </div>
                 <div class="card-footer">
                   <small class="text-muted">&#9733; &#9733; &#9733; &#9733; &#9734;</small>
@@ -278,15 +269,15 @@
                 </a>
                 <div class="card-body">
                   <div class="box">
-                    <a href="#popup2">
-                      <input type="button" value="Vapormax Plus Obsidian’s">
+                    <a href="#popup3">
+                      <input type="button" value="Alternate 4's">
                     </a>
                   </div>
 
-                  <div id="popup2" class="overlay" style="z-index : 1">
+                  <div id="popup3" class="overlay" style="z-index : 1">
 
                     <div class="popup">
-                      <h2>Vapormax Plus Obsidian’s</h2>
+                      <h2>Alternate 4's</h2>
                       <a class="close" href="#">&times;</a>
                       <div class="content">
                         Size 8.5 with original box
@@ -299,6 +290,7 @@
                       </div>
                     </div>
                   </div>
+               <h5>$165.00 </h5>
                 </div>
                 <div class="card-footer">
                   <small class="text-muted">&#9733; &#9733; &#9733; &#9733; &#9734;</small>
@@ -315,15 +307,15 @@
                 </a>
                 <div class="card-body">
                   <div class="box">
-                    <a href="#popup2">
-                      <input type="button" value="Vapormax Plus Obsidian’s">
+                    <a href="#popup4">
+                      <input type="button" value="Nyc 10's">
                     </a>
                   </div>
 
-                  <div id="popup2" class="overlay" style="z-index : 1">
+                  <div id="popup4" class="overlay" style="z-index : 1">
 
                     <div class="popup">
-                      <h2>Vapormax Plus Obsidian’s</h2>
+                      <h2>Nyc 10's</h2>
                       <a class="close" href="#">&times;</a>
                       <div class="content">
                         Size 8.5 with original box
@@ -336,6 +328,7 @@
                       </div>
                     </div>
                   </div>
+               <h5>$130.00</h5>
                 </div>
                 <div class="card-footer">
                   <small class="text-muted">&#9733; &#9733; &#9733; &#9733; &#9734;</small>
@@ -358,15 +351,15 @@
                 </a>
                 <div class="card-body">
                   <div class="box">
-                    <a href="#popup2">
-                      <input type="button" value="Vapormax Plus Obsidian’s">
+                    <a href="#popup5">
+                      <input type="button" value="Air Flight Hurache White Yellow Purple's">
                     </a>
                   </div>
 
-                  <div id="popup2" class="overlay" style="z-index : 1">
+                  <div id="popup5" class="overlay" style="z-index : 1">
 
                     <div class="popup">
-                      <h2>Vapormax Plus Obsidian’s</h2>
+                      <h2>Air Flight Hurache White Yellow Purple's</h2>
                       <a class="close" href="#">&times;</a>
                       <div class="content">
                         Size 8.5 with original box
@@ -379,6 +372,7 @@
                       </div>
                     </div>
                   </div>
+               <h5>$65.00</h5>
                 </div>
                 <div class="card-footer">
                   <small class="text-muted">&#9733; &#9733; &#9733; &#9733; &#9734;</small>
@@ -394,15 +388,15 @@
                 </a>
                 <div class="card-body">
                   <div class="box">
-                    <a href="#popup2">
-                      <input type="button" value="Vapormax Plus Obsidian’s">
+                    <a href="#popup6">
+                      <input type="button" value="Royalty 4's">
                     </a>
                   </div>
 
-                  <div id="popup2" class="overlay" style="z-index : 1">
+                  <div id="popup6" class="overlay" style="z-index : 1">
 
                     <div class="popup">
-                      <h2>Vapormax Plus Obsidian’s</h2>
+                      <h2>Royalty 4's</h2>
                       <a class="close" href="#">&times;</a>
                       <div class="content">
                         Size 8.5 with original box
@@ -415,6 +409,7 @@
                       </div>
                     </div>
                   </div>
+                <h5>$185.00</h5>
                 </div>
                 <div class="card-footer">
                   <small class="text-muted">&#9733; &#9733; &#9733; &#9733; &#9734;</small>
@@ -430,15 +425,15 @@
                 </a>
                 <div class="card-body">
                   <div class="box">
-                    <a href="#popup2">
-                      <input type="button" value="Vapormax Plus Obsidian’s">
+                    <a href="#popup7">
+                      <input type="button" value="Yeezy Pirate Black 350 Boost V1's">
                     </a>
                   </div>
 
-                  <div id="popup2" class="overlay" style="z-index : 1">
+                  <div id="popup7" class="overlay" style="z-index : 1">
 
                     <div class="popup">
-                      <h2>Vapormax Plus Obsidian’s</h2>
+                      <h2>Yeezy Pirate Black 350 Boost V1's</h2>
                       <a class="close" href="#">&times;</a>
                       <div class="content">
                         Size 8.5 with original box
@@ -451,6 +446,7 @@
                       </div>
                     </div>
                   </div>
+                <h5>$800.00</h5>
                 </div>
                 <div class="card-footer">
                   <small class="text-muted">&#9733; &#9733; &#9733; &#9733; &#9734;</small>
@@ -466,15 +462,15 @@
                 </a>
                 <div class="card-body">
                   <div class="box">
-                    <a href="#popup2">
-                      <input type="button" value="Vapormax Plus Obsidian’s">
+                    <a href="#popup8">
+                      <input type="button" value="Kyrie 5 Black Magic's">
                     </a>
                   </div>
 
-                  <div id="popup2" class="overlay" style="z-index : 1">
+                  <div id="popup8" class="overlay" style="z-index : 1">
 
                     <div class="popup">
-                      <h2>Vapormax Plus Obsidian’s</h2>
+                      <h2>Kyrie 5 Black Magic's</h2>
                       <a class="close" href="#">&times;</a>
                       <div class="content">
                         Size 8.5 with original box
@@ -487,6 +483,7 @@
                       </div>
                     </div>
                   </div>
+                <h5>$140.00 </h5>
                 </div>
                 <div class="card-footer">
                   <small class="text-muted">&#9733; &#9733; &#9733; &#9733; &#9734;</small>
@@ -502,15 +499,15 @@
                 </a>
                 <div class="card-body">
                   <div class="box">
-                    <a href="#popup2">
-                      <input type="button" value="Vapormax Plus Obsidian’s">
+                    <a href="#popup9">
+                      <input type="button" value="Cool Grey 8's">
                     </a>
                   </div>
 
-                  <div id="popup2" class="overlay" style="z-index : 1">
+                  <div id="popup9" class="overlay" style="z-index : 1">
 
                     <div class="popup">
-                      <h2>Vapormax Plus Obsidian’s</h2>
+                      <h2>Cool Grey 8's</h2>
                       <a class="close" href="#">&times;</a>
                       <div class="content">
                         Size 8.5 with original box
@@ -523,6 +520,7 @@
                       </div>
                     </div>
                   </div>
+               <h5>$150.00</h5>
                 </div>
                 <div class="card-footer">
                   <small class="text-muted">&#9733; &#9733; &#9733; &#9733; &#9734;</small>
@@ -545,15 +543,15 @@
                 </a>
                 <div class="card-body">
                   <div class="box">
-                    <a href="#popup2">
-                      <input type="button" value="Vapormax Plus Obsidian’s">
+                    <a href="#popup10">
+                      <input type="button" value="Chicago 2's">
                     </a>
                   </div>
 
-                  <div id="popup2" class="overlay" style="z-index : 1">
+                  <div id="popup10" class="overlay" style="z-index : 1">
 
                     <div class="popup">
-                      <h2>Vapormax Plus Obsidian’s</h2>
+                      <h2>Chicago 2's</h2>
                       <a class="close" href="#">&times;</a>
                       <div class="content">
                         Size 8.5 with original box
@@ -566,6 +564,7 @@
                       </div>
                     </div>
                   </div>
+               <h5>$100.00</h5>
                 </div>
                 <div class="card-footer">
                   <small class="text-muted">&#9733; &#9733; &#9733; &#9733; &#9734;</small>
@@ -587,15 +586,15 @@
                 </a>
                 <div class="card-body">
                   <div class="box">
-                    <a href="#popup2">
-                      <input type="button" value="Vapormax Plus Obsidian’s">
+                    <a href="#popup11">
+                      <input type="button" value="Bordeaux 12's">
                     </a>
                   </div>
 
-                  <div id="popup2" class="overlay" style="z-index : 1">
+                  <div id="popup11" class="overlay" style="z-index : 1">
 
                     <div class="popup">
-                      <h2>Vapormax Plus Obsidian’s</h2>
+                      <h2>Bordeaux 12's</h2>
                       <a class="close" href="#">&times;</a>
                       <div class="content">
                         Size 8.5 with original box
@@ -608,6 +607,7 @@
                       </div>
                     </div>
                   </div>
+               <h5>$165.00 </h5>
                 </div>
                 <div class="card-footer">
                   <small class="text-muted">&#9733; &#9733; &#9733; &#9733; &#9734;</small>
@@ -629,15 +629,15 @@
                 </a>
                 <div class="card-body">
                   <div class="box">
-                    <a href="#popup2">
-                      <input type="button" value="Vapormax Plus Obsidian’s">
+                    <a href="#popup12">
+                      <input type="button" value="Pure Money 4's">
                     </a>
                   </div>
 
-                  <div id="popup2" class="overlay" style="z-index : 1">
+                  <div id="popup12" class="overlay" style="z-index : 1">
 
                     <div class="popup">
-                      <h2>Vapormax Plus Obsidian’s</h2>
+                      <h2>Pure Money 4's</h2>
                       <a class="close" href="#">&times;</a>
                       <div class="content">
                         Size 8.5 with original box
@@ -650,6 +650,7 @@
                       </div>
                     </div>
                   </div>
+               <h5>$140.00 </h5>
                 </div>
                 <div class="card-footer">
                   <small class="text-muted">&#9733; &#9733; &#9733; &#9733; &#9734;</small>
