--- a/shop/brand-new/page2.html
+++ b/shop/brand-new/page2.html
@@ -133,9 +133,8 @@
 
         </ul>
 
-        <a href="./purchase-item/checkout-page.html" a class="a">
-          <i class="fa fa-shopping-cart" aria-hidden="true" style="padding-right:50px;"></i>
-        </a>
+        <a href="../../purchase-item/checkout-page.html" a class="a"> <i class="fa fa-shopping-cart" 
+          aria-hidden="true" 
 
 
         <form class="form-inline my-2 my-lg-0" id="searchbar">
