change links to work correctly

--- a/restoration-page.html
+++ b/restoration-page.html
@@ -203,7 +203,7 @@
 
     <tr>
         <td><div class="restoration-container">
-            <img class="insta" src="./img/Sole-icing.jpg">
+            <img class="insta" src="./img/Sole-Icing.jpg">
             <div class="restoration-overlay">
               <div class="text"><b>Sole Icing</b></div>
             </div>
